# conformers

./: LICENSE  README.md  pyproject.toml
conformers/: confgen.py  convert.py  density.py  optimize.py
conformers/cli/: conformers.py  density.py  process_list.py
