[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "conformers"
version = "0.1.0"
description = "script to generate conformers using rdkit"
authors = [{name = "Daniel Schwalbe-Koda", email = "dskoda@ucla.edu"}]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["materials-science", "chemistry"]
dependencies = [
    "rdkit",
    "tqdm",
    "click",
    "ase"
]

[tool.setuptools]
packages = ["conformers"]

[project.scripts]
conformers = "conformers.cli.conf:conformers"


[project.optional-dependencies]
torchani = ["torchani"]
